<resources>
    <string name="all_perms_granted" translatable="false">All permissions granted</string>
    <string name="all_perms_denied" translatable="false">All permissions denied, try yet</string>
    <string name="app_name">themesample</string>
    <string name="setting_picture_group_header">Picture Mode</string>
    <string name="setting_Automation" translatable="false">Interval Mode Settings</string>
    <string name="setting_bayerformat_description">Sensor raw format mode to be encoded as DNG</string>
    <string name="setting_bayerformat_header">Bayer Format: </string>
    <string name="setting_opcode_description" translatable="false">Click to download OPCode for DNG. Used for flat field correction</string>
    <string name="setting_opcode_header" translatable="false">Raw Flat Field: </string>
    <string name="setting_matrixchooser_description" translatable="false">Choose Custom ColorMatrix, when off default get used</string>
    <string name="setting_matrixchooser_header" translatable="false">CustomMatrix: </string>
    <string name="setting_tonemapchooser_description" translatable="false">Tonemap curve that get applied to the dng</string>
    <string name="setting_tonemapchooser_header" translatable="false">ToneMapProfile: </string>
    <string name="setting_mfnr_description" translatable="false">Multiframe 3D NR</string>
    <string name="setting_mfnr_header" translatable="false">MNFR: </string>
    <string name="setting_jpegquality_description">Quality Value in % </string>
    <string name="setting_jpegquality_header">JPEG Quality: </string>
    <string name="setting_picturesize_description">Picture Size : </string>
    <string name="setting_picturesize_header">Size: </string>
    <string name="setting_secondarypicturesize_description" translatable="false">Secondary Picture Size : </string>
    <string name="setting_secondarypicturesize_header" translatable="false">Secondary Size: </string>
    <string name="setting_raw_group_header" translatable="false">Raw Stuff </string>
    <string name="setting_video_group_header">Video Mode</string>
    <string name="setting_videoprofile_description">Media Profile used VideoRecording</string>
    <string name="setting_videoprofile_header">Video Profile: </string>
    <string name="setting_videoaudiosource_description" translatable="false">Audio Source for recording</string>
    <string name="setting_videoaudiosource_header" translatable="false">AudioSource: </string>
    <string name="setting_videoprofileeditor_description" translatable="false">Create Custom VideoProfiles</string>
    <string name="setting_videoprofileeditor_header" translatable="false">Video Profile Editor </string>
    <string name="setting_videohdr_description">turn on to enable hdr video</string>
    <string name="setting_videohfr_description" translatable="false">Video FPS Selection</string>
    <string name="setting_videohsr_description" translatable="false">Enables Highspeed Video Recording</string>
    <string name="setting_videobitrate_description" translatable="false">Video Bitrate Selection</string>
    <string name="setting_vs_description" translatable="false">Enables video stabilization</string>
    <string name="setting_videohdr_header">Video HDR: </string>
    <string name="setting_videohfr_header" translatable="false">Video Frame Rate: </string>
    <string name="setting_videohsr_header" translatable="false">Video HSR: </string>
    <string name="setting_videobitrate_header" translatable="false">Video Bitrate: </string>
    <string name="setting_vs_header" translatable="false">Video Stabilization: </string>
    <string name="setting_hdr_">Bracket Mode </string>
    <string name="setting_aebracket_header">AE-Bracket: </string>
    <string name="setting_aebracket_description">If ON the camera takes 3 Images in one Shot</string>
    <string name="setting_imagestack_header" translatable="false">Stacking Mode Settings: </string>
    <string name="setting_imagestack_description" translatable="false">Select how the Images get Stacked</string>
    <string name="setting_freedcam_">Freedcam Settings</string>
    <string name="setting_api_header">API:</string>
    <string name="setting_api_description">Select the Api you want to use</string>
    <string name="setting_externalshutter_description">Alternate key which can trigger the shutter from ie headset, volume button</string>
    <string name="setting_externalshutter_header">External Shutter Trigger: </string>
    <string name="setting_location_description">Enables Geo-tagging in images </string>
    <string name="setting_location_header">Geo-Tag Location: </string>
    <string name="setting_guide_description">Overlays selected composition grid</string>
    <string name="setting_guide_header">Grid: </string>
    <string name="setting_horizont_description" translatable="false">Dual Axis Image Level to show image straightness</string>
    <string name="setting_horizont_header" translatable="false">Image Level: </string>
    <string name="setting_focuspeak_description">Enables FocusPeak on the Preview</string>
    <string name="setting_focuspeak_header">Focuspeak: </string>
    <string name="setting_nightoverlay_description" translatable="false">shows a red Overlay</string>
    <string name="setting_nightoverlay_header" translatable="false">NightOverlay: </string>
    <string name="setting_touchtocapture_description" translatable="false">When enabled, a image capture starts.</string>
    <string name="setting_touchtocapture_header" translatable="false">Touch to Capture: </string>
    <string name="setting_orientation_header">Orientation Correction: </string>
    <string name="setting_orientation_description">Rotates the Camera 180° if ON</string>
    <string name="setting_featuredetector_header" translatable="false">Run FeatureDetector</string>
    <string name="setting_featuredetector_description" translatable="false"></string>
    <string name="setting_sdcard_header">Storage Location: </string>
    <string name="setting_sdcard_description" translatable="false">
        File save location.\n
        NOTE: On KitKat you can save only to external SD when your Device is rooted and the SDFix is applied!\n
        On Lollipop and Marshmallow choose the root of your SDcard!
    </string>
    <string name="setting_interval_header" translatable="false">Shutter Fire Interval</string>
    <string name="setting_interval_texter" translatable="false">Interval</string>
    <string name="setting_interval_duration_header" translatable="false">Duration till interval ends</string>
    <string name="setting_interval_duration_text" translatable="false">Interval Duration</string>
    <string name="setting_switch_aspect_header" translatable="false">Switch width and height</string>
    <string name="setting_switch_aspect_text" translatable="false">Switch Preview Aspect Ratio</string>
    <string name="setting_timer_header" translatable="false">Delay till shutter fires</string>
    <string name="setting_timer_text" translatable="false">Time</string>
    <string name="setting_theme_header">Theme: </string>
    <string name="setting_theme_description">Choose your favorite Theme</string>
    <string name="setting_savecamparams_header">Save Camera Parameters</string>
    <string name="setting_savecamparams_description" translatable="false"> </string>
    <string name="setting_camera_">... Settings</string>
    <string name="setting_antiflicker_header">Anti Flicker: </string>
    <string name="setting_antiflicker_description">Reduce flickering on artificial light sources</string>
    <string name="setting_color_header">Color Effect: </string>
    <string name="setting_color_description">Color effect style</string>
    <string name="setting_scene_header">Scene: </string>
    <string name="setting_scene_description">Select the Scene that matches current Scenario</string>
    <string name="setting_focuspeakcolor_header" translatable="false">Focuspeak Color: </string>
    <string name="setting_focuspeakcolor_description" translatable="false">Color for the sharp area</string>
    <string name="setting_enablerenderscript_header" translatable="false">Preview PostProcessing: </string>
    <string name="setting_enablerenderscript_description" translatable="false">Activate it to enable Focuspeak or LiveHistogram</string>
    <string name="setting_opencameralegacy_header" translatable="false">Open Camera in LegacyMode: </string>
    <string name="setting_opencameralegacy_description" translatable="false">De/Activate when you have problems with Manuals</string>
    <string name="setting_qcom_">Qualcomm Settings</string>
    <string name="setting_cds_header">Correlated double sampling: </string>
    <string name="setting_cds_description">Sensor electrical readout measured twice</string>
    <string name="setting_dis_header">Digital Image Stabilization: </string>
    <string name="setting_dis_description">Shifts electronic image to counteract movement</string>
    <string name="setting_lensshade_header">Lens shade: </string>
    <string name="setting_lensshade_description">Reduces Vignetting on the edges </string>
    <string name="setting_mce_header">Memory Color Enhancement: </string>
    <string name="setting_mce_description">Boosts Colors equivalent to adobe vibrance</string>
    <string name="setting_redeye_header">Red-Eye Reduction: </string>
    <string name="setting_redeye_description">Emits a small pre-flash before the main flash</string>
    <string name="setting_scenedec_header">SceneDetection: </string>
    <string name="setting_scenedec_description">Auto Scene Mode Changer</string>
    <string name="setting_temporaldenoise_header">Temporal Denoise: </string>
    <string name="setting_temporaldenoise_description">Multi Frame 3D Noise Reduction</string>
    <string name="setting_temporaldenoiseV_header" translatable="false">Temporal Video Denoise: </string>
    <string name="setting_temporaldenoiseV_description" translatable="false">Multi Frame Video 3D Noise Reduction</string>
    <string name="setting_pdaf_header" translatable="false">PDAF Control: </string>
    <string name="setting_pdaf_description" translatable="false">Control Phase Detection Auto Focus</string>
    <string name="setting_rdi_header" translatable="false">RDI: </string>
    <string name="setting_rdi_description" translatable="false">Raw Dump Interface for Zero Lag Raws</string>
    <string name="setting_seemore_header" translatable="false">StillMOre: </string>
    <string name="setting_seemore_description" translatable="false">Tonemap LTM</string>
    <string name="setting_refocus_header" translatable="false">Refocus: </string>
    <string name="setting_refous_description" translatable="false">FAUX DOF</string>
    <string name="setting_truepotrait_header" translatable="false">True Potrait: </string>
    <string name="setting_truepotrait_description" translatable="false">Description pending</string>
    <string name="setting_optizoom_header" translatable="false">Optizoom: </string>
    <string name="setting_optizoom_description" translatable="false">Auto track zoom object</string>
    <string name="setting_chroma_header" translatable="false">Chroma Flash: </string>
    <string name="setting_chroma_description" translatable="false">MultiFRame flash image</string>
    <string name="setting_waveletdenoise_header">Wavelet Denoise: </string>
    <string name="uisetting_wb_header">WB</string>
    <string name="uisetting_iso_header">ISO</string>
    <string name="uisetting_flash_header">Flash</string>
    <string name="uisetting_focus_header">Focus</string>
    <string name="uisetting_ae_header">AE</string>
    <string name="uisetting_night_header">Night</string>
    <string name="uisetting_continouseshot_header">Continous Shoot</string>
    <string name="uisetting_format_header">Format</string>
    <string name="uisetting_mode_header">Mode</string>
    <string name="uisetting_exit_header">Exit</string>
</resources>