<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/guideHolder"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/horHolder"></LinearLayout>

    <freed.cam.ui.themesample.cameraui.FocusSelector
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageView_Crosshair"
        android:visibility="gone" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/imageView_meteringarea"
        android:background="@drawable/exposure_metering"
        android:visibility="gone" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageViewFocusClose"
        android:background="@drawable/focusclose"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/uiSettingsWidthRight"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/uiSettingsWidthRight" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/shuttericon_size"
        android:layout_alignParentStart="false"
        android:background="#75000000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView_time"
            android:textSize="@dimen/cameraui_infooverlay_textsize"
            android:textColor="#ffffff"
            android:visibility="visible"
            android:shadowColor="#000000"
            android:elevation="2dp"
            android:background="#02000000"
            android:paddingLeft="5dp"
            android:text=" " />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView_format"
            android:textSize="@dimen/cameraui_infooverlay_textsize"
            android:layout_marginLeft="@dimen/infoOverlayTextMargine"
            android:textColor="#ffffff"
            android:visibility="gone"
            android:shadowColor="#000000"
            android:elevation="2dp"
            android:background="#02000000"
            android:paddingLeft="5dp"
            android:text=" " />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView_size"
            android:textSize="@dimen/cameraui_infooverlay_textsize"
            android:layout_marginLeft="@dimen/infoOverlayTextMargine"
            android:textColor="#ffffff"
            android:shadowColor="#000000"
            android:elevation="2dp"
            android:background="#02000000"
            android:paddingLeft="5dp"
            android:text=" "
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView_storage"
            android:textSize="@dimen/cameraui_infooverlay_textsize"
            android:layout_marginLeft="@dimen/infoOverlayTextMargine"
            android:textColor="#ffffff"
            android:shadowColor="#000000"
            android:elevation="2dp"
            android:background="#02000000"
            android:paddingLeft="5dp"
            android:text=" "
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView_battery"
            android:textSize="@dimen/cameraui_infooverlay_textsize"
            android:layout_marginLeft="@dimen/infoOverlayTextMargine"
            android:textColor="#ffffff"
            android:shadowColor="#000000"
            android:elevation="2dp"
            android:background="#02000000"
            android:paddingLeft="5dp"
            android:text=" "
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView_dngsupported"
            android:textSize="@dimen/cameraui_infooverlay_textsize"
            android:layout_marginLeft="@dimen/infoOverlayTextMargine"
            android:textColor="#ffffff"
            android:shadowColor="#000000"
            android:elevation="2dp"
            android:background="#02000000"
            android:paddingLeft="5dp"
            android:text=" "
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView_buildmodel"
            android:textSize="@dimen/cameraui_infooverlay_textsize"
            android:layout_marginLeft="@dimen/infoOverlayTextMargine"
            android:textColor="#ffffff"
            android:shadowColor="#000000"
            android:elevation="2dp"
            android:background="#02000000"
            android:paddingLeft="5dp"
            android:text=" "
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView_appversion"
            android:textSize="@dimen/cameraui_infooverlay_textsize"
            android:layout_marginLeft="@dimen/infoOverlayTextMargine"
            android:textColor="#ffffff"
            android:shadowColor="#000000"
            android:elevation="2dp"
            android:background="#02000000"
            android:paddingLeft="5dp"
            android:text=" "
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/menuBackgColor"
        android:layout_centerInParent="true"
        android:id="@+id/userMessageHolder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView_usermessage"
            android:textColor="@color/menuTextColor" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/left_ui_holder_width"
        android:layout_height="wrap_content"
        android:id="@+id/left_ui_holder"
        android:gravity="center_vertical">


        <freed.cam.ui.themesample.cameraui.childs.UiSettingsChild
            android:layout_width="@dimen/ui_settings_item_width"
            android:layout_height="@dimen/ui_settings_item_height"
            android:id="@+id/wb"
            app:HeaderText="@string/uisetting_wb_header"
            android:background="@drawable/quck_set_wb"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp" />

        <freed.cam.ui.themesample.cameraui.childs.UiSettingsChild
            android:layout_width="@dimen/ui_settings_item_width"
            android:layout_height="@dimen/ui_settings_item_height"
            android:id="@+id/ui_settings_iso"
            android:layout_marginLeft="5dp"
            app:HeaderText="@string/uisetting_iso_header"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/quck_set_iso_png"
            android:layout_marginTop="3dp" />

        <freed.cam.ui.themesample.cameraui.childs.UiSettingsChild
            android:layout_width="@dimen/ui_settings_item_width"
            android:layout_height="@dimen/ui_settings_item_height"
            android:id="@+id/Flash"
            android:layout_marginLeft="5dp"
            app:HeaderText="@string/uisetting_flash_header"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/quck_set_flash"
            android:layout_marginTop="3dp" />

        <freed.cam.ui.themesample.cameraui.childs.UiSettingsChild
            android:layout_width="@dimen/ui_settings_item_width"
            android:layout_height="@dimen/ui_settings_item_height"
            android:id="@+id/focus_uisetting"
            android:layout_marginLeft="5dp"
            app:HeaderText="@string/uisetting_focus_header"
            android:background="@drawable/quck_set_focus"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp" />

        <freed.cam.ui.themesample.cameraui.childs.UiSettingsChild
            android:layout_width="@dimen/ui_settings_item_width"
            android:layout_height="@dimen/ui_settings_item_height"
            android:id="@+id/Ae"
            android:layout_marginLeft="5dp"
            app:HeaderText="@string/uisetting_ae_header"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/quck_set_ae"
            android:layout_marginTop="3dp" />

        <freed.cam.ui.themesample.cameraui.childs.UiSettingsChild
            android:layout_width="@dimen/ui_settings_item_width"
            android:layout_height="@dimen/ui_settings_item_height"
            android:id="@+id/AePriority"
            android:layout_marginLeft="5dp"
            app:HeaderText="@string/uisetting_ae_header"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ae_priority"
            android:layout_marginTop="3dp" />

        <freed.cam.ui.themesample.cameraui.childs.UiSettingsChild
            android:layout_width="@dimen/ui_settings_item_width"
            android:layout_height="@dimen/ui_settings_item_height"
            android:id="@+id/night"
            android:layout_marginLeft="5dp"
            app:HeaderText="@string/uisetting_night_header"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/quck_set_night"
            android:layout_marginTop="3dp" />
        <freed.cam.ui.themesample.cameraui.childs.UiSettingsChild
            android:layout_width="@dimen/ui_settings_item_width"
            android:layout_height="@dimen/ui_settings_item_height"
            android:id="@+id/continousShot"
            android:layout_marginLeft="5dp"
            app:HeaderText="@string/uisetting_continouseshot_header"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/quck_set_contin"
            android:layout_marginTop="3dp" />
        <freed.cam.ui.themesample.cameraui.childs.UiSettingsChild
            android:layout_width="@dimen/ui_settings_item_width"
            android:layout_height="@dimen/ui_settings_item_height"
            android:id="@+id/hdr_toggle"
            android:layout_marginLeft="5dp"
            app:HeaderText="@string/setting_hdr_"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/quck_set_hdr"
            android:layout_marginTop="3dp" />
        <freed.cam.ui.themesample.cameraui.childs.UiSettingsChild
            android:layout_width="@dimen/ui_settings_item_width"
            android:layout_height="@dimen/ui_settings_item_height"
            android:id="@+id/format"
            android:layout_marginLeft="5dp"
            app:HeaderText="@string/uisetting_format_header"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/quck_set_format2"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="10dp"/>


    </LinearLayout>



    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="@dimen/shuttericon_size"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:id="@+id/right_ui_holder">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <freed.cam.ui.themesample.cameraui.childs.UiSettingsChildExit
                    android:layout_width="@dimen/ui_settings_item_width"
                    android:layout_height="@dimen/ui_settings_item_height"
                    android:id="@+id/exit"
                    app:HeaderText="@string/uisetting_exit_header"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center_vertical"
                    android:background="@drawable/quck_set_exit"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp" />

                <freed.cam.ui.themesample.cameraui.childs.UiSettingsChildModuleSwitch
                    android:layout_width="@dimen/ui_settings_item_width"
                    android:layout_height="@dimen/ui_settings_item_height"
                    android:id="@+id/mode_switch"
                    app:HeaderText="@string/uisetting_mode_header"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/quck_set_mode"
                    android:layout_gravity="center_horizontal" />

                <freed.cam.ui.themesample.cameraui.childs.UiSettingsFocusPeak
                    android:layout_width="@dimen/ui_settings_item_width"
                    android:layout_height="@dimen/ui_settings_item_height"
                    android:id="@+id/ui_focuspeak"
                    app:HeaderText="@string/setting_focuspeak_header"
                    android:background="@drawable/quck_set_zebra"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

        </LinearLayout>

        <freed.cam.ui.themesample.cameraui.ShutterButton
            android:layout_width="@dimen/shuttericon_size"
            android:layout_height="@dimen/shuttericon_size"
            android:id="@+id/shutter_button"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center|center_horizontal|bottom">

            <freed.cam.ui.themesample.cameraui.childs.UiSettingsChildAeLock
                android:layout_width="@dimen/ui_settings_item_width"
                android:layout_height="@dimen/ui_settings_item_height"
                android:id="@+id/ae_lock"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/quck_set_ae_lock"
                android:layout_marginTop="8dp"/>

            <freed.cam.ui.themesample.cameraui.childs.UiSettingsChildCameraSwitch
                android:layout_width="@dimen/ui_settings_item_width"
                android:layout_height="@dimen/ui_settings_item_height"
                android:id="@+id/camera_switch"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/quck_set_cswitch"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/manualModesHolder"
        android:foregroundGravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/manualModesHolderLeftMargine"
        android:layout_marginRight="@dimen/manualModesHolderRightMargine"></FrameLayout>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cameraui_values_fragment_holder"
        android:layout_marginLeft="@dimen/uiSettingsWidth"
        android:layout_marginRight="@dimen/shuttericon_size"
        android:layout_alignParentTop="false"
        android:layout_centerVertical="true"></FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/helpfragment_container"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </FrameLayout>

</RelativeLayout>
